--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -481,6 +481,33 @@ body {
           }
         }
       }
+      .page {
+        // border: 2px solid black;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+        color: #8181a5;
+
+        .title {
+          text-align: center;
+          // border: 2px solid black;
+          font-size: 30px;
+        }
+        .desc {
+          font-weight: 700;
+          font-size: 25px;
+        }
+        .image {
+          img {
+            height: 500px;
+            // width: 500px;
+            display: grid;
+            place-items: center;
+            margin: 0 auto;
+          }
+        }
+      }
     }
     .quickbook {
       background-color: white;
